# pleiades_writing_systems

./: README.md  pyproject.toml
data/cache/: iana_org.sqlite
src/pleiades_writing_systems/: romanization.py
tests/: test_romanization.py  test_template.py
